--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "homepage": "https://arnab-datta.github.io/counter-app",
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "typescript": "^3.4.2"
